--- a/css/universal.css
+++ b/css/universal.css
@@ -3,7 +3,7 @@ body,h1,h2,h3,h4,h5,h6 {
 }
 
 body {
-	background: linear-gradient(to right, #DBDBDB, #EAEAEA);
+	background: linear-gradient(to right, #22c1c3, #fdbb2d);
 }
 
 
